config/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abevalflow-mlflow
  labels:
    app.kubernetes.io/part-of: abevalflow
    app.kubernetes.io/name: mlflow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mlflow
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
